# skol

./: LICENSE  README.md  examples.txt  formats.py  guesses.py  llm.py  main.py  pyproject.toml  test_semantics.py  tests.py
docs/examples/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  5b.txt  6.txt  7.txt  8.txt  8b.txt  9.txt  9b.txt  9c.txt
skol/: examples.txt  formats.py  guesses.py  llm.py  main.py
src/: formats.py  guesses.py  main.py
src/tests/: test_semantics.py
