[project]
name = "skol"
version = "0.0.1"
dependencies = ["openai==0.26",
	        "click<=8.1.3"]
description = "`skol` is a command-line tool that transform data into lists that you can paste in your favorite language. It will try very hard to guess where the data should be split and how to treat escaped characters."
authors = [{name = "Charles-Pierre Astolfi", email = "cpa@crans.org"}]
readme = "README.md"

[project.scripts]
skol = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 150
target_version = ['py311']
