[tool.poetry]
name = "skol"
version = "1.0.0"
description = "`skol` is a command-line tool that transform data into lists that you can paste in your favorite language. It will try very hard to guess where the data should be split and how to treat escaped characters."
authors = ["Charles-Pierre Astolfi <8159895-charlespierre@users.noreply.gitlab.com>"]
readme = "README.md"
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.23.6"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skol = 'skol.main:main'
