[project]
name = "skol"
version = "1.1.0"
description = "`skol` is a command-line tool that transform data into lists that you can paste in your favorite language. It will try very hard to guess where the data should be split and how to treat escaped characters."
authors = [
    {name = "Charles-Pierre Astolfi", email = "8159895-charlespierre@users.noreply.gitlab.com"}
]
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.12"
dependencies = [
    "openai>=1.23.6",
    "click>=8.1.7",
]

[project.scripts]
skol = "skol.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
